objects/Expense__c/Expense__c.object-meta.xml
<CustomObject>
    <description>custom object for tracking network expense, parallel to Netx__c in legacy Zayo.</description>
    <label>Allstream Expense</label>
    <nameField>
        <displayFormat>ZEX-{0000}</displayFormat>
        <label>Zayo Expense Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allstream Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>