objects/Expense__c/fields/A_Loc_Entrance_Requirement__c.field-meta.xml
<CustomField>
    <fullName>A_Loc_Entrance_Requirement__c</fullName>
    <label>A Loc Entrance Requirement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Dual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>