objects/Expense__c/fields/ACNA__c.field-meta.xml
<CustomField>
    <fullName>ACNA__c</fullName>
    <description>Access Customer Name Abbreviation: a three-digit alpha code assigned to identify carriers -  both ILECs and CLECs for billing and other identification purposses.</description>
    <inlineHelpText>Access Customer Name Abbreviation: a three-digit alpha code assigned to identify carriers -  both ILECs and CLECs for billing and other identification purposses.</inlineHelpText>
    <label>ACNA</label>
    <length>3</length>
    <type>Text</type>
</CustomField>