objects/Expense__c/fields/Allocated_Netex_MRC__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Netex_MRC__c</fullName>
    <formula>IF(OR(ISPICKVAL(Parent_Expense__r.Netex_Service__c, &quot;DS1 Pack&quot;), 
ISPICKVAL(Parent_Expense__r.Netex_Service__c, &quot;DS3 Pack&quot;),
ISPICKVAL(Parent_Expense__r.Netex_Service__c, &quot;Fiber Pack&quot;),
ISPICKVAL(Parent_Expense__r.Netex_Service__c, &quot;Fiber Lease&quot;)),
Parent_Expense__r.Netx_MRC__c / Parent_Expense__r.Netex_Service_Quantity__c, null)</formula>
    <label>Allocated Netex MRC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>