objects/Expense__c/fields/AutoSubmit__c.field-meta.xml
<CustomField>
    <fullName>AutoSubmit__c</fullName>
    <label>AutoSubmit</label>
    <length>20</length>
    <type>Text</type>
</CustomField>