objects/Expense__c/fields/B_Feed_Diversity__c.field-meta.xml
<CustomField>
    <fullName>B_Feed_Diversity__c</fullName>
    <label>B Feed Diversity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Diversity</fullName>
            </value>
            <value>
                <fullName>PDU Diversity</fullName>
            </value>
            <value>
                <fullName>UPS Diversity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>