objects/Expense__c/fields/Bandwidth__c.field-meta.xml
<CustomField>
    <fullName>Bandwidth__c</fullName>
    <label>Bandwidth</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1Mb</fullName>
            </value>
            <value>
                <fullName>1.5Mb</fullName>
            </value>
            <value>
                <fullName>3Mb</fullName>
            </value>
            <value>
                <fullName>4Mb</fullName>
            </value>
            <value>
                <fullName>5Mb</fullName>
            </value>
            <value>
                <fullName>6Mb</fullName>
            </value>
            <value>
                <fullName>8Mb</fullName>
            </value>
            <value>
                <fullName>10Mb</fullName>
            </value>
            <value>
                <fullName>13Mb</fullName>
            </value>
            <value>
                <fullName>15Mb</fullName>
            </value>
            <value>
                <fullName>20Mb</fullName>
            </value>
            <value>
                <fullName>25Mb</fullName>
            </value>
            <value>
                <fullName>30Mb</fullName>
            </value>
            <value>
                <fullName>35Mb</fullName>
            </value>
            <value>
                <fullName>40Mb</fullName>
            </value>
            <value>
                <fullName>45Mb</fullName>
            </value>
            <value>
                <fullName>50Mb</fullName>
            </value>
            <value>
                <fullName>60Mb</fullName>
            </value>
            <value>
                <fullName>70Mb</fullName>
            </value>
            <value>
                <fullName>80Mb</fullName>
            </value>
            <value>
                <fullName>90Mb</fullName>
            </value>
            <value>
                <fullName>100Mb</fullName>
            </value>
            <value>
                <fullName>120Mb</fullName>
            </value>
            <value>
                <fullName>125Mb</fullName>
            </value>
            <value>
                <fullName>150Mb</fullName>
            </value>
            <value>
                <fullName>200Mb</fullName>
            </value>
            <value>
                <fullName>250Mb</fullName>
            </value>
            <value>
                <fullName>300Mb</fullName>
            </value>
            <value>
                <fullName>350Mb</fullName>
            </value>
            <value>
                <fullName>400Mb</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>