objects/Expense__c/fields/Base_Rent_MRC__c.field-meta.xml
<CustomField>
    <fullName>Base_Rent_MRC__c</fullName>
    <description>Rollup of Base Rent costs from the Expense Item level. Used to calculate Yearly Base Rent Cost / SF and Yearly Base + T-Net Cost / SF.</description>
    <inlineHelpText>Base Rent Costs -&gt; Rent-FTT, Rent-Office, Rent-POP, Rent-Warehouse.</inlineHelpText>
    <label>Base Rent MRC</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>