objects/Expense__c/fields/Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Account to which this Expense Builder is intended to be attributed as a Cost against its Revenue. Infrastructure expenses would not have a Billing Account.</inlineHelpText>
    <label>Billing Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Zayo_Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>