objects/Expense__c/fields/Breaker_Size__c.field-meta.xml
<CustomField>
    <fullName>Breaker_Size__c</fullName>
    <label>Breaker Size</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>