objects/Expense__c/fields/Building_Z__c.field-meta.xml
<CustomField>
    <fullName>Building_Z__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Building Z</label>
    <referenceTo>Building__c</referenceTo>
    <relationshipName>NetxZ</relationshipName>
    <type>Lookup</type>
</CustomField>