objects/Expense__c/fields/Building_Z_Text__c.field-meta.xml
<CustomField>
    <fullName>Building_Z_Text__c</fullName>
    <label>Building Z Text</label>
    <length>80</length>
    <type>Text</type>
</CustomField>