objects/Expense__c/fields/Business_Unit_Owner__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Owner__c</fullName>
    <description>OVS is added for transferring to Onvoy, as is ZEN. It should not show up on any record types. TTN-0000780304, TTN-0000955387.</description>
    <label>Business Unit Owner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Allstream_SMB</fullName>
                <default>true</default>
                <label>Allstream_SMB</label>
            </value>
            <value>
                <fullName>ZG</fullName>
            </value>
            <value>
                <fullName>ZC</fullName>
            </value>
            <value>
                <fullName>INTL</fullName>
            </value>
            <value>
                <fullName>INTL-GEO</fullName>
            </value>
            <value>
                <fullName>INTL-FibreSpeed</fullName>
            </value>
            <value>
                <fullName>ZB</fullName>
            </value>
            <value>
                <fullName>ZFS</fullName>
            </value>
            <value>
                <fullName>INTL-FR</fullName>
            </value>
            <value>
                <fullName>OVS</fullName>
            </value>
            <value>
                <fullName>ZEN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>