objects/Expense__c/fields/Current_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Expiration_Date__c</fullName>
    <label>Current Expiration Date</label>
    <type>Date</type>
</CustomField>