objects/Expense__c/fields/Customer_A_End__c.field-meta.xml
<CustomField>
    <fullName>Customer_A_End__c</fullName>
    <description>Populate this field with the carrier name that owns the suite where the connection is to be made.</description>
    <inlineHelpText>Populate this field with the carrier name that owns the suite where the connection is to be made.</inlineHelpText>
    <label>Customer A End</label>
    <length>40</length>
    <type>Text</type>
</CustomField>