objects/Expense__c/fields/Customer_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account_Name__c</fullName>
    <formula>Service_Order__r.CustomerAccount__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Account Name</label>
    <type>Text</type>
</CustomField>