objects/Expense__c/fields/Dark_Fiber_Type__c.field-meta.xml
<CustomField>
    <fullName>Dark_Fiber_Type__c</fullName>
    <description>This field is used to determine the Product Group. It will be the differentiator between the &quot;Dark Fiber - Long Haul&quot; and &quot;Dark Fiber - Metro&quot; (formerly just &quot;Dark Fiber&quot;) Product Groups. Currently there is no &quot;FTT - Dark Fiber - Long Haul&quot; Product Group.</description>
    <label>Dark Fiber Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Metro</fullName>
            </value>
            <value>
                <fullName>Long Haul</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>