objects/Expense__c/fields/DF_Fiber_Count__c.field-meta.xml
<CustomField>
    <fullName>DF_Fiber_Count__c</fullName>
    <label>DF Fiber Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>