objects/Expense__c/fields/DF_Fiber_Miles__c.field-meta.xml
<CustomField>
    <fullName>DF_Fiber_Miles__c</fullName>
    <formula>DF_Route_Miles__c * DF_Fiber_Count__c</formula>
    <label>DF Fiber Miles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>