objects/Expense__c/fields/Disconnect_Case__c.field-meta.xml
<CustomField>
    <fullName>Disconnect_Case__c</fullName>
    <label>Disconnect Case</label>
    <length>50</length>
    <type>Text</type>
</CustomField>