objects/Expense__c/fields/Disconnect_Type__c.field-meta.xml
<CustomField>
    <fullName>Disconnect_Type__c</fullName>
    <label>Disconnect Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Audit</fullName>
            </value>
            <value>
                <fullName>CMO</fullName>
            </value>
            <value>
                <fullName>Day2Day</fullName>
            </value>
            <value>
                <fullName>Cleanup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>