objects/Expense__c/fields/Expected_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Expected_Utilization__c</fullName>
    <label>Expected Utilization</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>