objects/Expense__c/fields/Expense_Type__c.field-meta.xml
<CustomField>
    <fullName>Expense_Type__c</fullName>
    <label>Expense Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NetEx</fullName>
            </value>
            <value>
                <fullName>NetOps Conduit</fullName>
            </value>
            <value>
                <fullName>NetOps Contracted Maintenance</fullName>
            </value>
            <value>
                <fullName>NetOps Fiber O&amp;M</fullName>
            </value>
            <value>
                <fullName>NetOps Franchise Fees</fullName>
            </value>
            <value>
                <fullName>NetOps Hardware/Software</fullName>
            </value>
            <value>
                <fullName>NetOps Locates</fullName>
            </value>
            <value>
                <fullName>NetOps Pole Attachments</fullName>
            </value>
            <value>
                <fullName>NetOps Real Estate</fullName>
            </value>
            <value>
                <fullName>NetOps Right-of-Way</fullName>
            </value>
            <value>
                <fullName>NetOps Utilities</fullName>
            </value>
            <value>
                <fullName>NetOps Variable Expense</fullName>
            </value>
            <value>
                <fullName>Other SGA</fullName>
            </value>
            <value>
                <fullName>Other SGA Hardware/Software</fullName>
            </value>
            <value>
                <fullName>NetOps DCN/ADSL Monitoring Lines</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>