objects/Expense__c/fields/Fire_Disconnect__c.field-meta.xml
<CustomField>
    <fullName>Fire_Disconnect__c</fullName>
    <label>Fire Disconnect</label>
    <length>30</length>
    <type>Text</type>
</CustomField>