objects/Expense__c/fields/Floor_Z__c.field-meta.xml
<CustomField>
    <fullName>Floor_Z__c</fullName>
    <label>Floor Z</label>
    <length>50</length>
    <type>Text</type>
</CustomField>