objects/Expense__c/fields/Intercompany_Service_Text__c.field-meta.xml
<CustomField>
    <fullName>Intercompany_Service_Text__c</fullName>
    <description>Related Intercompany Service</description>
    <inlineHelpText>Related Intercompany Service</inlineHelpText>
    <label>Intercompany Service Text</label>
    <length>80</length>
    <type>Text</type>
</CustomField>