objects/Expense__c/fields/Intra_Building__c.field-meta.xml
<CustomField>
    <fullName>Intra_Building__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TTN-0000985334 - Check to see if the Expense is Intra-Building, so it may be sorted in reports.</description>
    <inlineHelpText>Is this an intra-building Expense</inlineHelpText>
    <label>Intra-Building</label>
    <type>Checkbox</type>
</CustomField>