objects/Expense__c/fields/Lateral_A__c.field-meta.xml
<CustomField>
    <fullName>Lateral_A__c</fullName>
    <label>Lateral A</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>One (Single)</fullName>
            </value>
            <value>
                <fullName>Two (Diverse)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>