objects/Expense__c/fields/Local_Network_Protection_Z_Loc__c.field-meta.xml
<CustomField>
    <fullName>Local_Network_Protection_Z_Loc__c</fullName>
    <inlineHelpText>Local Network=Network between a Zayo POP or an on-net ILEC CO and the originating/terminating loc (not including entrance). Does the ordered service need to have both a working and protect channel that is electronically switched in the event of a failure?</inlineHelpText>
    <label>Local Network Protection Z Loc</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>