objects/Expense__c/fields/Major_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Major_Project_Name__c</fullName>
    <label>Major Project Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>