objects/Expense__c/fields/Market_Lookup_Text__c.field-meta.xml
<CustomField>
    <fullName>Market_Lookup_Text__c</fullName>
    <label>Market Text</label>
    <length>80</length>
    <type>Text</type>
</CustomField>