objects/Expense__c/fields/Match_Complete__c.field-meta.xml
<CustomField>
    <fullName>Match_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Match Complete</label>
    <type>Checkbox</type>
</CustomField>