objects/Expense__c/fields/Max_Burst_Speed__c.field-meta.xml
<CustomField>
    <fullName>Max_Burst_Speed__c</fullName>
    <description>The max speed that the customer can burst to.</description>
    <inlineHelpText>The max speed that the customer can burst to.</inlineHelpText>
    <label>Max Burst Speed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10Mb</fullName>
            </value>
            <value>
                <fullName>16Mb</fullName>
            </value>
            <value>
                <fullName>20Mb</fullName>
            </value>
            <value>
                <fullName>30Mb</fullName>
            </value>
            <value>
                <fullName>45Mb</fullName>
            </value>
            <value>
                <fullName>50Mb</fullName>
            </value>
            <value>
                <fullName>100Mb</fullName>
            </value>
            <value>
                <fullName>150Mb</fullName>
            </value>
            <value>
                <fullName>200Mb</fullName>
            </value>
            <value>
                <fullName>300Mb</fullName>
            </value>
            <value>
                <fullName>400Mb</fullName>
            </value>
            <value>
                <fullName>500Mb</fullName>
            </value>
            <value>
                <fullName>600Mb</fullName>
            </value>
            <value>
                <fullName>700Mb</fullName>
            </value>
            <value>
                <fullName>800Mb</fullName>
            </value>
            <value>
                <fullName>900Mb</fullName>
            </value>
            <value>
                <fullName>1000Mb</fullName>
            </value>
            <value>
                <fullName>2000Mb</fullName>
            </value>
            <value>
                <fullName>1 GigE</fullName>
            </value>
            <value>
                <fullName>2G</fullName>
            </value>
            <value>
                <fullName>2.5G</fullName>
            </value>
            <value>
                <fullName>3GE</fullName>
            </value>
            <value>
                <fullName>3G</fullName>
            </value>
            <value>
                <fullName>4G</fullName>
            </value>
            <value>
                <fullName>5G</fullName>
            </value>
            <value>
                <fullName>10G</fullName>
            </value>
            <value>
                <fullName>15G</fullName>
            </value>
            <value>
                <fullName>20G</fullName>
            </value>
            <value>
                <fullName>30G</fullName>
            </value>
            <value>
                <fullName>40G</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>