objects/Expense__c/fields/Metasolv_Design_ID__c.field-meta.xml
<CustomField>
    <fullName>Metasolv_Design_ID__c</fullName>
    <label>Metasolv Design ID</label>
    <length>9</length>
    <type>Text</type>
</CustomField>