objects/Expense__c/fields/Migrated__c.field-meta.xml
<CustomField>
    <fullName>Migrated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this Expense was migrated from Allstream&#39;s SFDC</description>
    <inlineHelpText>Whether this Expense was migrated from Allstream&#39;s SFDC</inlineHelpText>
    <label>Migrated</label>
    <type>Checkbox</type>
</CustomField>