objects/Expense__c/fields/Netex_Service__c.field-meta.xml
<CustomField>
    <fullName>Netex_Service__c</fullName>
    <description>Before adding or renaming any entries, check with the TEOCO integration team (currently Mikayla Gimelli). Netex Service can sometimes be used to determine the GL code for TEOCO updating. Also before adding any entries, understand the difference between existing options and why a new option is needed rather than using an existing option. 

Be sure to also add/update the options on the same field on Expense Builder.</description>
    <label>Netex Service</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DS1</fullName>
            </value>
            <value>
                <fullName>DS3</fullName>
            </value>
            <value>
                <fullName>OC3</fullName>
            </value>
            <value>
                <fullName>OC12</fullName>
            </value>
            <value>
                <fullName>OC48</fullName>
            </value>
            <value>
                <fullName>OC192</fullName>
            </value>
            <value>
                <fullName>1G wave</fullName>
            </value>
            <value>
                <fullName>2.5G wave</fullName>
            </value>
            <value>
                <fullName>10G wave</fullName>
            </value>
            <value>
                <fullName>100G Wave</fullName>
            </value>
            <value>
                <fullName>CO Mux (3:1)</fullName>
            </value>
            <value>
                <fullName>CO Colocation - Space</fullName>
            </value>
            <value>
                <fullName>CO Colocation - CFA augment</fullName>
            </value>
            <value>
                <fullName>CO Colocation - Power augment</fullName>
            </value>
            <value>
                <fullName>CO X-connect - Unmanaged Fiber</fullName>
            </value>
            <value>
                <fullName>CO X-connect - Managed Optical</fullName>
            </value>
            <value>
                <fullName>CO X-Connect DS3</fullName>
            </value>
            <value>
                <fullName>DS1 Cross Connect</fullName>
            </value>
            <value>
                <fullName>DS3 Cross Connect</fullName>
            </value>
            <value>
                <fullName>FE(Cat5) Cross Connect</fullName>
            </value>
            <value>
                <fullName>2-fiber Cross Connect</fullName>
            </value>
            <value>
                <fullName>4-fiber Cross Connect</fullName>
            </value>
            <value>
                <fullName>Fiber lease</fullName>
            </value>
            <value>
                <fullName>IP</fullName>
            </value>
            <value>
                <fullName>Peering</fullName>
            </value>
            <value>
                <fullName>Entrance Facility Rider - DS3</fullName>
            </value>
            <value>
                <fullName>Entrance Facility Rider - OC3</fullName>
            </value>
            <value>
                <fullName>Entrance Facility Rider - OC12</fullName>
            </value>
            <value>
                <fullName>Cable Link from Street</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>