objects/Expense__c/fields/Netex_Type__c.field-meta.xml
<CustomField>
    <fullName>Netex_Type__c</fullName>
    <label>Netex Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Disconnect List</fullName>
            </value>
            <value>
                <fullName>Disputes</fullName>
            </value>
            <value>
                <fullName>FTT</fullName>
            </value>
            <value>
                <fullName>ILEC Colo</fullName>
            </value>
            <value>
                <fullName>Infrastructure</fullName>
            </value>
            <value>
                <fullName>Interco Customer</fullName>
            </value>
            <value>
                <fullName>Interco Infrastructure</fullName>
            </value>
            <value>
                <fullName>Intercompany Expenses</fullName>
            </value>
            <value>
                <fullName>LPC</fullName>
            </value>
            <value>
                <fullName>OVS</fullName>
            </value>
            <value>
                <fullName>RCP Credit</fullName>
            </value>
            <value>
                <fullName>Taxes</fullName>
            </value>
            <value>
                <fullName>Usage</fullName>
            </value>
            <value>
                <fullName>ZEN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>