objects/Expense__c/fields/NetEx_Type_Classification__c.field-meta.xml
<CustomField>
    <fullName>NetEx_Type_Classification__c</fullName>
    <formula>CASE(
Netex_Type__c,
&#39;FTT&#39;, &#39;FTT&#39;,
&#39;Customer&#39;, &#39;Customer&#39;,
&#39;Infrastructure&#39;, &#39;Infrastructure&#39;,
&#39;Other&#39;
)</formula>
    <label>NetEx Type Classification</label>
    <type>Text</type>
</CustomField>