objects/Expense__c/fields/Network_Protection_Required__c.field-meta.xml
<CustomField>
    <fullName>Network_Protection_Required__c</fullName>
    <inlineHelpText>Does the ordered service need to have both a working and protect channel that is electronically switched in the event of a failure?</inlineHelpText>
    <label>Local Network Protection A Loc</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>