objects/Expense__c/fields/Netx_MRC_Disputed__c.field-meta.xml
<CustomField>
    <fullName>Netx_MRC_Disputed__c</fullName>
    <label>Netx MRC Disputed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>