objects/Expense__c/fields/Number_of_RU__c.field-meta.xml
<CustomField>
    <fullName>Number_of_RU__c</fullName>
    <label>Number of RU</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>