objects/Expense__c/fields/Old_Building_A_Id__c.field-meta.xml
<CustomField>
    <fullName>Old_Building_A_Id__c</fullName>
    <label>Old Building A Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>