objects/Expense__c/fields/Old_Service_Order_Component_Id__c.field-meta.xml
<CustomField>
    <fullName>Old_Service_Order_Component_Id__c</fullName>
    <label>Old Service Order Component Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>