objects/Expense__c/fields/Port_Handoff_Speed__c.field-meta.xml
<CustomField>
    <fullName>Port_Handoff_Speed__c</fullName>
    <label>Port Handoff Speed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10/100BaseT</fullName>
            </value>
            <value>
                <fullName>1000BaseT</fullName>
            </value>
            <value>
                <fullName>GigE</fullName>
            </value>
            <value>
                <fullName>10GigE</fullName>
            </value>
            <value>
                <fullName>100G</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>