objects/Expense__c/fields/Power_Feeds__c.field-meta.xml
<CustomField>
    <fullName>Power_Feeds__c</fullName>
    <label>Power Feeds</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A Feed</fullName>
            </value>
            <value>
                <fullName>B Feed</fullName>
            </value>
            <value>
                <fullName>A and B Feed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>