objects/Expense__c/fields/Power_Voltage__c.field-meta.xml
<CustomField>
    <fullName>Power_Voltage__c</fullName>
    <label>Power Voltage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>120V</fullName>
            </value>
            <value>
                <fullName>208V</fullName>
            </value>
            <value>
                <fullName>-48V</fullName>
            </value>
            <value>
                <fullName>3 Phase</fullName>
            </value>
            <value>
                <fullName>230V</fullName>
            </value>
            <value>
                <fullName>410V</fullName>
            </value>
            <value>
                <fullName>410V 3 Phase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>