objects/Expense__c/fields/Price_Per_Mb_for_Burst_Usage__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Mb_for_Burst_Usage__c</fullName>
    <description>This is the amount that Zayo will charge the customer for each MB of bandwidth over their committed amount. Please use numbers, and do not include the $ sign.</description>
    <inlineHelpText>This is the amount that Zayo will charge the customer for each MB of bandwidth over their committed amount. Please use numbers, and do not include the $ sign.</inlineHelpText>
    <label>Price Per Mb for Burst Usage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>