objects/Expense__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cloud Virtual Data Center</fullName>
            </value>
            <value>
                <fullName>Colocation</fullName>
            </value>
            <value>
                <fullName>Conduit</fullName>
            </value>
            <value>
                <fullName>Dark Fiber</fullName>
            </value>
            <value>
                <fullName>Dedicated Ethernet</fullName>
            </value>
            <value>
                <fullName>DIA</fullName>
            </value>
            <value>
                <fullName>ELAN</fullName>
            </value>
            <value>
                <fullName>ELine</fullName>
            </value>
            <value>
                <fullName>ILA Colocation</fullName>
            </value>
            <value>
                <fullName>Interconnect</fullName>
            </value>
            <value>
                <fullName>ISP Colocation</fullName>
            </value>
            <value>
                <fullName>ISP Interconnect</fullName>
            </value>
            <value>
                <fullName>ISP Riser Construction</fullName>
            </value>
            <value>
                <fullName>Managed Services</fullName>
            </value>
            <value>
                <fullName>PDN</fullName>
            </value>
            <value>
                <fullName>Private Line</fullName>
            </value>
            <value>
                <fullName>Technical Services</fullName>
            </value>
            <value>
                <fullName>Wavelengths</fullName>
            </value>
            <value>
                <fullName>ZPS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>